--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de controle de ponto</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="data-hora">
@@ -26,6 +26,6 @@
     </dialog>
     <button id="btn-registrar-ponto">Registrar ponto!</button>
 
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
