--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de controle de ponto</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
         <p id="hora-min-seg"></p>
     </div>
     <dialog id="dialog-ponto">
-        <p>Data</p>
+        <p id="dialog-data">Data</p>
         <p id="dialog-hora">Hora</p>
         <select name="select-tipos-ponto" id="select-tipos-ponto">
             <option value="entrada">Entrada</option>
@@ -33,6 +33,6 @@
     <div class="hidden" id="div-alerta">
         <p>Ponto registrado com sucesso!</p>
     </div>
-    <script src="index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
